fixed topbar navbar spacing

--- a/src/styles/Topbar.css
+++ b/src/styles/Topbar.css
@@ -26,7 +26,7 @@
 }
 
 .outer_navbar_container {
-  width: 25%;
+  width: 225px
 }
 
 .navbar_container {
